--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,12 @@ repositories {
 }
 
 dependencies {
+    compile('mysql:mysql-connector-java')
+    compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile group: 'javax.persistence', name :'javax.persistence-api', version :'2.2'
+    annotationProcessor ('org.projectlombok:lombok')
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    annotationProcessor 'org.projectlombok:lombok'
-    implementation 'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
