Create TEST 및 관련 의존성 매개 변수 추가
- Junit 의존성
- 한글깨짐 > 매개 변수 추가

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+    testCompile("org.springframework.boot:spring-boot-starter-test") // test compile
     compile('mysql:mysql-connector-java')
     compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
